[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/fsm/states/Attack/Attack.gd" type="Script" id=1]

[node name="Attack" type="Node"]

script = ExtResource( 1 )

[node name="AimTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="CooldownTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="AimTimer" to="." method="_on_AimTimer_timeout"]

[connection signal="timeout" from="CooldownTimer" to="AimTimer" method="start"]


